fix(widget-footer): Use latest version of logo, fix vertical-alignment

--- a/src/places.css
+++ b/src/places.css
@@ -119,8 +119,7 @@
 }
 
 .ap-footer a svg {
-  vertical-align: text-bottom;
-  max-width: 60px;
+  vertical-align: middle;
 }
 
 .ap-footer:hover {
